<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="36dp">


    <ImageView

        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"

        android:src="@drawable/inchtape_unsplash" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:text="@string/bmi_calculator" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <!--<LinearLayout not this as we want only one radio button to work at a time, it is a type of Linear Layout -->


        <RadioButton
            android:id="@+id/r_b_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/r_b_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>


    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/age"
        android:inputType="number" />

    <LinearLayout
        android:id="@+id/hight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/feet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:hint="@string/feet"
            android:inputType="number" />

        <EditText
            android:id="@+id/inch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/inches"
            android:inputType="number" />

    </LinearLayout>

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="Weight (kg)"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/rest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/rest1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="17dp"
        android:layout_margin="8dp"/>


   <!-- <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:paddingStart="160dp"
        android:paddingEnd="0dp"
        android:text="@string/app_by_falkenbeast"
        android:textSize="12sp" /> -->

    <!--       android:text="@string/_23_6_you_are_fit" /      -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/app_by_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="7dp"
            android:layout_marginRight="12dp"

            android:paddingEnd="0dp"
            android:text="@string/app_by_falkenbeast"
            android:textSize="12sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</LinearLayout>


